# cpp-graduate

./: 03-extern-use.cc  03-extern.cc  03-mangle.cc  03-odr2.c  03-static.cc  04-coercion.cc  04-ctors-ambig.cc  04-volstr.cc  05-chained.cc  05-conflict.cc  05-convert.cc  05-intprom.cc  05-pairminus.cc  05-qsortbench-cast.cc  05-qsortbench-op.cc  05-qsortbench.cc  06-constraints.cc  06-defargs.cc  06-dyn-casts-errs.cc  06-inhs.cc  06-mult-casts-typeid.cc  06-namehide-sol.cc  06-namehide.cc  06-nonvirtual.cc  06-pvc.cc  06-romb-virtual-casts.cc  06-romb-virtual-dyn-casts.cc  06-romb-virtual.cc  06-romb.cc  06-slicearg.cc  06-slicebase-solved.cc  06-slicebase.cc  07-addone.cc  07-bufio.c  07-cin-corr.cc  07-cin-ignore.cc  07-cin-not.cc  07-cin-wrong.cc  07-fmtspec.cc  07-hello.c  (+5 more)
01-basics/: cache.cc  cache.hpp  ctor.cc  qsortbench.c  qsortbench.cc  this.cc  triangle-common.cc  triangle.cc
02-lrefs/: clref.cc  newdelete.cc  ptref.cc  spacial.cc  this.cc
02-lrefs/initorder/: module-1.cc  module-2.cc  module.hh
02-lrefs/triangles/: lingeo.hpp  square.cpp
03-concrete/: coercion.cc  conflict.cc  ctors-ambig.cc  implicit.cc  mangle.c  mangle.cc  overload.cc  rvo.cc  setsol.cc  unnecessary-1.cc  unnecessary-2.cc  unnecessary.h  volstr.cc
04-opers/: addressof.cc  implicit.cc  spaceship.cc
04-raii/: drilldown.cc  lvannot.cc  movesem.cc  scopeswap.cc
05-inheritance/: defargs.cc  dyn-casts-errs.cc  inhs.cc  namehide-sol.cc  pvc.cc  romb-virtual-casts.cc  romb-virtual.cc  romb.cc  slicearg.cc
05-opers/: addressof.cc  binaryop-basic.cc  binaryop-resolved.cc  binaryop.cc  builtin.cc  chained.cc  convert.cc  intprom.cc  qsortbench-cast.cc  qsortbench-op.cc  qsortbench.cc  reinterpret.cc  strangeicast.cc  twovariants.cc
05-opers/odr/: header.h  user1.cc  user2.cc
06-inheritance/: binop.cc  constraints.cc  defargs.cc  dyn-casts-errs.cc  inhs.cc  mult-casts-typeid.cc  mult-casts.cc  namehide-sol.cc  namehide.cc  nonvirtual.cc  pvc.cc  romb-virtual-casts.cc  romb-virtual-dyn-casts.cc  romb-virtual.cc  romb.cc  slicearg.cc  slicebase.cc  union-ctors.cc  unique-deleter.cc
06-parsers/: regex.cc
06-parsers/advgrammar/: numdriver.hpp
06-parsers/numadvanced/: numlex.cc
06-parsers/numexample/: numlex.cc  numlex.l
06-parsers/numgrammar/: numgrammar.y  numtest.txt
07-compute/: cl_justbuf.cc  cl_platform.c  movelight.c
07-parsers/: regex.cc
07-parsers/advgrammar/: CMakeLists.txt  driver.cc  numdriver.hpp  numgrammar.y
07-parsers/numadvanced/: CMakeLists.txt  numlex.cc  numlexer.hpp
07-parsers/numexample/: CMakeLists.txt  numlex.cc
07-parsers/numgrammar/: CMakeLists.txt  driver.cc  numdriver.hpp  numgrammar-sr-fixed.y  numgrammar-sr.y  numgrammar.l  numgrammar.y
07-parsers/simplest-arith/: CMakeLists.txt  driver.hpp  simplest-amb.yy  simplest-bad.yy  simplest-lr.yy  simplest-nlr.yy  simplest.cc  simplest.l
08-exceptions/: exc.cc  multinh.cc  new-strict.cc  noexc-dtor.cc  noexc.cc  opnew-cst.cc  opnew.cc  slicing.cc  throws.cc
08-exceptions/myvec-demo/: controllable.hh  myvec-1.cc  myvec-2.cc  myvec-3.cc  myvec-4.cc
09-containers/: adapters-queue.cc  sbt.cc
09-exceptions/: exc.cc  multinh.cc  rte.cc  slicing.cc  throws.cc
09-solid/: common-model.cc  ocp-bad.cc  ocp-good.cc  srp-bad.cc  srp-good.cc  str-model.cc
09-solid/uml/: model-nontempl.dia  model-templ.dia  ocp-bad.dia  ocp-good.dia  srp-bad.dia  srp-ok.dia
10-3d/: ogl-extensions.cc  ogl-frag-shader.cc  ogl-motion.cc  ogl-simplest.cc  vk-simplest.cc
10-3d/shaders/: models.vert  simplest-v.frag  simplest-v.vert  simplest.frag  simplest.vert  sincolor.frag
11-compute/: cl_gemm.cc  cl_hist.cc  cl_justbuf.c  cl_justbuf.cc  cl_platform.c  cl_vectoradd.cc  gemm_localmem.cl  gemm_simple.cl  gemm_simple_modif.cl  hist-onlyg-corr.cl  hist-onlyg.cl  hist.cl
11-rvrefs/: benchnoex.cc
12-iters/: benchcopy-2.cc  benchcopy.cc  categories.cc  hasfoobar.cc  hinnant.cc  meyers.cc  newfoobar.cc  twoctor.cc  ziptests.cc
12-templates/: benchemplace.cc  partial_spec.cc
13-llvm/: autoptr-uniq.cc  deleters.cc  fib.cc
13-llvm/01-naive/: CMakeLists.txt  Node.cc  Symtab.hpp  compiler.y  driver.cc  parser.hpp  scanner.l
13-llvm/01-naive/tests/fib/: file.pcl
13-llvm/01-naive/tests/simplest/: addsub.pcl
13-sfinae/: benchcopy-2.cc  benchcopy.cc  empl-bench-eff.cc  empl-bench-ineff.cc
14-constexpr/: binsuffix-1.cc  distance.cc  enable-if-1.cc  enable-if-2.cc  enable-if-3.cc  enable-if-4.cc  fib.cc  pack-expand.cc  print-all.cc
14-iterators/: categories.cc  fibit.cc  hinnant.cc  matrix_repro.cc  meyers.cc  revcont.cc  wrongit.cc  ziprange.hpp  ziptests.cc
15-algs/: binary-searches.cc  foreach-02.cc  foreach-03.cc  foreach-04.cc  simplecomb.cc  transform.cc
15-llvm/: fib.cc
15-llvm/naive-pcl/: CMakeLists.txt  Codegen.cc  Codegen.hpp  INode.hpp  Node.cc  Node.hpp  Symtab.hpp  compiler.cpp.h  compiler.y  driver.cc  lexer.cpp  (+3 more)
16-containers/: accbench.cc  braces.cc  fillbench.cc  multimap_bench.cc  orbit.cc  prim.cc  reserve.cc  selfhash.cc  splice.cc  sview.cc  umap.cc
17-algorithms/: any-void.cc  bench-unseq.cc  capture-body-function.cc  capture-body.cc  captures.cc  copy-backward.cc  copy.cc  finally.cc  hello-lambdas.cc  inner-product.cc  lambdas-rename.cc  local-context.cc  mismatch.cc  move-capture.cc  partial-sums.cc  pretty-name.cc  repose.cc  rotates.cc  sorted-algs.cc  toupper.cc  unseq.cc
18-constexpr/: binsuffix_ce.cc  binsuffix_types.cc  ce-inside.cc  ceval.cc  cexpr.cc  complex-number.cc  concept-combination.cc  concept-overload.cc  ctif.cc  eqcomp-triada.cc  fact.cc  fib.cc  isqrt.cc  print-all.cc  req-eval.cc  req-overload.cc  req-partition.cc  req-req.cc  static-log.cc  unruh.cc
archive/: 01-qsortbench.c  02-ptref.cc  03-defargs.cc  03-overload.cc  03-reinterpret.cc  05-builtin.cc  05-drilldown.cc  06-constraints.cc  06-namehide.cc  06-romb-virtual-dyn-casts.cc  06-romb.cc  07-inherit.cc  07-poluslo-fs.cc  07-poluslo.cc  07-stringstreams.cc
emplace/: emplace.cc  heavy.hpp  ineff.cc  optimized.cc  piecewise.cc
interesting/: matrix_repro.cc
triangles/: lingeo.hpp  square.cpp
(+94 files in other folders)
